# CircuitsVis

.github/workflows/: Python.yml  React.yml
python/: Demonstration.ipynb  __init__.py  build.py  pyproject.toml
python/circuitsvis/: render.py
react/: .eslintrc.js  esbuild.js  package.json  rollup.config.js  tsconfig.json
react/scripts/rollup/: createRollupConfig.js  rollup.config.js  rollup.esm.config.js
react/src/: codegen.ts  index.ts  web-components.ts
react/src/attention/: AttentionPatterns.stories.tsx  AttentionPatterns.tsx
react/src/attention/components/: AttentionTokens.tsx  useHoverLock.tsx
react/src/attention/tests/: AttentionPatterns.test.tsx
react/src/examples/: Hello.stories.tsx  Hello.tsx
visualizations/: package.json  tsconfig.json
visualizations/src/: index.ts
visualizations/src/attention/: AttentionPatterns.tsx
visualizations/src/examples/: Hello.tsx
