[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "CircuitsVis"
description = "Mechanistic Interpretability Visualizations using React"
dependencies = [
    "datasets",
    "einops",
    "filehash",
    "ipython",
    "jupyterlab",
    "numpy",
    "pandas",
    "pytest",
    "snapshottest",
    "torch",
    "tqdm",
    "transformers",
    "ipython",
    "typeguard"
]

# Allow version inferance
[tool.setuptools_scm]
